--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.20",
+    "nodemailer": "^6.6.2",
     "stripe": "^8.138.0"
   }
 }
